--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,52 @@
-Not implemented yet! 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>About Me: Web Developer & More</title>
+	<link href="styles.css" rel="stylesheet">
 
-<br>
-<br>
+</head>
+<body>
+	<nav>
+		<ol>
+	        <li class="crumb"><a href="./home.html">Home</a></li>
+	        <li class="crumb"><a href="./profile.html">Profile</a></li>
+	        <li class="crumb"><a href="./about.html">About</a></li>
+	    </ol>
+	</nav>
+    <header>
+        <h1>Meet Tj</h1>
+    </header>
 
-<a href="./home.html"><< Back </a>
+    <button id="color">My Favorite Color</button>
+    <button id="place">My Favorite Place</button>
+    <button id="ritual">My Favorite Ritual</button>
+
+    <div class="profile-container">
+        <h2>About Me</h2>
+        <p>Hello, I'm Tj, a passionate web developer with diverse interests and a zest for life. 
+            I believe in the power of technology to transform ideas into reality, 
+            and I'm here to share a glimpse of my journey with you.</p>
+
+        <h2>Skills</h2>
+        <p class="skills">My expertise lies in web development, with proficiency in HTML, CSS, JavaScript, 
+            and various web frameworks. I enjoy crafting beautiful, responsive, and user-friendly websites 
+            that leave a lasting impression.</p>
+
+        <h2>Interests</h2>
+        <p class="interests">Beyond coding, I have a knack for solving Rubik's Cubes at lightning speed. 
+            I find joy in the intricate algorithms that drive both web development and cube-solving. 
+            In my free time, I'm an avid car enthusiast, and you'll often find me exploring the latest automotive innovations. 
+            I also love hiking, connecting with nature, and honing my culinary skills through adventurous cooking.</p>
+
+        <h2>Career Goals</h2>
+        <p class="career-goals">My ultimate career goal is to establish my own coding consulting firm, 
+            where I can leverage my web development expertise to assist businesses in achieving their digital aspirations. 
+            I aspire to lead a team of creative minds and make a meaningful impact on the tech world.</p>
+    </div>
+
+    <footer>
+        <p>Thank you for getting to know me!</p>
+    </footer>
+    <script src="profile.js"></script>
+</body>
+</html>
