--- a/profile.html
+++ b/profile.html
@@ -17,9 +17,9 @@
         <h1>Meet Tj</h1>
     </header>
 
-    <button id="color">My Favorite Color</button>
-    <button id="place">My Favorite Place</button>
-    <button id="ritual">My Favorite Ritual</button>
+    <button class="profile_button"id="color">My Favorite Color</button>
+    <button class="profile_button"id="place">My Favorite Place</button>
+    <button class="profile_button"id="ritual">My Favorite Ritual</button>
 
     <div class="profile-container">
         <h2>About Me</h2>
