--- a/profile.html
+++ b/profile.html
@@ -16,10 +16,15 @@
     <header>
         <h1>Meet Tj</h1>
     </header>
-
-    <button class="profile_button"id="color">My Favorite Color</button>
-    <button class="profile_button"id="place">My Favorite Place</button>
-    <button class="profile_button"id="ritual">My Favorite Ritual</button><br><br>
+    <div class="profile-top">
+        <img src="/image0-min.png" id="profile_image">
+        <div class="profile_info">
+            <button class="profile_button"id="color">My Favorite Color</button>
+            <button class="profile_button"id="place">My Favorite Place</button>
+            <button class="profile_button"id="ritual">My Favorite Ritual</button><br><br>
+        </div>
+        
+    </div>
     <!-- <button class="profile_button"id="me">Me</button> -->
 
     <div class="profile-container">
